examples/test/testpolicy6231.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6231
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key33: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value14
          key7: value43
      podSelector:
        matchLabels:
          key38: value46
          key48: value45
